--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>VVS Shop • FiveM Mods, Chains, Clothing</title>
+    <title>VVS Shop • FiveM Mods, Weapons, Clothing</title>
     <meta name="description"
-        content="VVS Shop — Premium FiveM custom weapons, VVS-style chains, and clothing. Optimized, high-quality assets for your server." />
+        content="VVS Shop — Premium FiveM custom weapons, and clothing. Optimized, high-quality assets for your server." />
     <link rel="icon" type="image/png" href="imgs/vvsv2shop.png" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
