--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="grid partners">
                     <a class="partner-tile" href="https://discord.gg/downsouthrp" target="_blank" rel="noopener">🌴 Down South RP</a>
                     <a class="partner-tile" href="https://discord.gg/bmBSQVrKme" target="_blank" rel="noopener">💎 South Side Customs</a>
-                    <div class="partner-tile">Your logo here</div>
+                    <a class="partner-tile" href="https://discord.com/idontsmokerp" target="_blank" rel="noopener">🌵 I Don't Smoke RP</a>
                 </div>
 
                 <div class="card mt-lg partner-feature" id="dsrp">
@@ -151,6 +151,26 @@
                     <p>✨ Whether you're a solo player or a crew boss, having the right drip makes all the difference. Show off your style, rep your gang, and flex in the city like never before!</p>
                     <div class="cta-row">
                         <a class="btn btn-primary" href="https://discord.gg/bmBSQVrKme" target="_blank" rel="noopener">Join the Discord</a>
+                    </div>
+                </div>
+
+                <div class="card mt-lg partner-feature" id="idontsmokerp">
+                    <h3>🌵 I Don't Smoke RP 🌵</h3>
+                    <p>Mexico Border Roleplaying</p>
+                    <p>Mexico/Arizona/Colombia</p>
+                    <ul>
+                        <li>Pemex y Brechas (original)</li>
+                        <li>Frontera w/Border Patrol/Marina/LSPD/SWAT</li>
+                        <li>Blindadas,Ranchos,VipGuns,Cascos,Chalecos</li>
+                        <li>Custom Cartel/Coyote/Pollero/Drug Scripts</li>
+                        <li>Dunas Y Rutas Y Favelas Y Racetracks</li>
+                        <li>Starter Pack Y Female Starter Pack</li>
+                        <li>Drag/Street/Drifting/Dune Racing</li>
+                        <li>Eventos Y Privadas Con Grupo</li>
+                        <li>Custom Jobs For Civs y Buchonas</li>
+                    </ul>
+                    <div class="cta-row">
+                        <a class="btn btn-primary" href="https://discord.com/invite/idontsmokerp" target="_blank" rel="noopener">Join the Discord</a>
                     </div>
                 </div>
 
